XForms bug 294441 - fix model-construct-done processing. Patch by aaronr, r=smaug/me a=mkaply